--- a/README
+++ b/README
@@ -1,3 +1,15 @@
-Low-density-language Twitter corpus builder
-functionw.txt
-seedw.txt
+TweetCaT - a tool for building Twitter corpora of smaller languages 
+
+Parameters of the tool are the following:
+- a list of function words of the language of interest used for language identification (stored in file functionw.txt)
+- a list of seed words specific for the language of interest (stored in file seedw.txt)
+- parameters in the config.py file:
+	- LANG_ID_THRESHOLD=0.01 # threshold of percentage of tokens in the timeline from the function word list
+	- SLEEP_BETWEEN_ITERATIONS=60*60*12 # number of seconds
+	- ITERATION_COUNT=0 # 0 for unlimited number of iterations
+	- CONSUMER_KEY=''
+	- CONSUMER_SECRET=''
+	- ACCESS_TOKEN=''
+	- ACCESS_TOKEN_SECRET=''
+
+The only dependency of the tool is tweepy (https://github.com/tweepy/tweepy).
