--- a/README
+++ b/README
@@ -13,3 +13,5 @@ Parameters of the tool are the following:
 	- ACCESS_TOKEN_SECRET=''
 
 The only dependency of the tool is tweepy (https://github.com/tweepy/tweepy).
+
+An extended abstract has been submitted to LREC 2014. If accepted, this will be the paper to cite if you use the tool.
